--- a/index.html
+++ b/index.html
@@ -25,20 +25,29 @@
 <div class="toss-box" id="box">
 
 
-    <input type="radio" id="head" name="option" value="head">
+    <input type="radio" id="head" name="option" value="Head">
     <label for="head">Heads</label>
     <br>
     
 
-     <input type="radio" id="tail" name="option" value="tail">
+     <input type="radio" id="tail" name="option" value="Tail">
     <label for="tail">Tail</label>
     <br>
     <br>
 
     <button onClick="toss()">Toss</button>
+    <h3 id="choice"></h3>
+
+    <h3 id="result"></h3>
+
+    <h3 id="finalResult"></h3>
 
 
 </div>
+
+<center><h2 id="user1a"></h2></center>
+<center><h2 id="user2"></h2></center>
+
 
   
         
