--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="toss-box" id="box">
 
 
-    <input type="radio" id="head" name="option" value="Head">
+    <input type="radio" id="head" name="option" value="Heads">
     <label for="head">Heads</label>
     <br>
     
